--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,16 +3,11 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-color: var(--ifm-color-emphasis-100); 
 }
 
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
   }
-}
-
-.buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
